// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/PdfViewer AutoFallback smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer ComparisonView smoke-test 1`] = `
<div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
  <div>
    <h3 class="text-lg font-semibold mb-4">
      Modal Version
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-semibold mb-4">
      Inline Version
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
</div>
`;

exports[`Components/PdfViewer CustomLabels smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer Default smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer Inline smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer InlineWithoutCard smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer LargeHeightInline smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer LongTitle smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer MultipleDocuments smoke-test 1`] = `
<div class="space-y-6">
  <div>
    <h3 class="text-lg font-semibold mb-2">
      Modal Version
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-semibold mb-2">
      Technical Document
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
  <div>
    <h3 class="text-lg font-semibold mb-2">
      Long Title Document
    </h3>
    <div class="flex justify-center items-center h-64"
         id="_r_ID_"
         role="status"
         aria-live="polite"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
           aria-hidden="true"
      >
        <path d="M21 12a9 9 0 1 1-6.219-8.56">
        </path>
      </svg>
      <span class="sr-only">
        Loading…
      </span>
    </div>
  </div>
</div>
`;

exports[`Components/PdfViewer NativeViewer smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer SmallHeightInline smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;

exports[`Components/PdfViewer TechnicalDocument smoke-test 1`] = `
<div class="flex justify-center items-center h-64"
     id="_r_ID_"
     role="status"
     aria-live="polite"
>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       class="lucide lucide-loader-circle animate-spin motion-reduce:animate-none size-12 text-primary"
       aria-hidden="true"
  >
    <path d="M21 12a9 9 0 1 1-6.219-8.56">
    </path>
  </svg>
  <span class="sr-only">
    Loading…
  </span>
</div>
`;
